Battle CRUD, Simulation run